--- a/src/pages/shopping-list/shopping-list.html
+++ b/src/pages/shopping-list/shopping-list.html
@@ -1,22 +1,24 @@
-<!--
-  Generated template for the ShoppingListPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
   <ion-navbar>
     <ion-title>Shopping List</ion-title>
+    <ion-buttons end>
+      <button ion-button icon-only (click)="addItem()">
+        <ion-icon name="add"></ion-icon>
+      </button>
+    </ion-buttons>
+    
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
+  <p *ngIf="!(shoppingListRef$ | async)" class="text-center">Retrieving data...</p>
   <ion-list>
-    <ion-item>
-      
+    <ion-item *ngFor="let item of shoppingListRef$ | async" (click)="selectShoppingItem(item)">
+      <h2>{{item.itemName}}</h2>
+      <p>{{item.itemNumber}}</p>
     </ion-item>
   </ion-list>
 </ion-content>
