--- a/src/pages/add-shopping-list/add-shopping-list.html
+++ b/src/pages/add-shopping-list/add-shopping-list.html
@@ -9,11 +9,11 @@
 
 <ion-content padding>
   <ion-item>
-    <ion-label floating>Item Name</ion-label>
+    <ion-label stacked>Item Name</ion-label>
     <ion-input type="text" [(ngModel)]="shoppingItem.itemName"></ion-input>
   </ion-item>
   <ion-item>
-    <ion-label floating>Item Name</ion-label>
+    <ion-label stacked>Item Number</ion-label>
     <ion-input type="number" [(ngModel)]="shoppingItem.itemNumber"></ion-input>
   </ion-item>
 
