--- a/src/pages/shopping-list/shopping-list.html
+++ b/src/pages/shopping-list/shopping-list.html
@@ -3,6 +3,9 @@
   <ion-navbar>
     <ion-title>Shopping List</ion-title>
     <ion-buttons end>
+      <button ion-button icon-only (click)="viewSettings()">
+        <ion-icon name="settings"></ion-icon>
+      </button>
       <button ion-button icon-only (click)="addItem()">
         <ion-icon name="add"></ion-icon>
       </button>
