--- a/src/pages/shopping-list/shopping-list.html
+++ b/src/pages/shopping-list/shopping-list.html
@@ -1,7 +1,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>Shopping List</ion-title>
+    <ion-title>{{ 'TITLE' | translate }}</ion-title>
     <ion-buttons end>
       <button ion-button icon-only (click)="viewSettings()">
         <ion-icon name="settings"></ion-icon>
