--- a/src/pages/shopping-list/shopping-list.html
+++ b/src/pages/shopping-list/shopping-list.html
@@ -1,6 +1,6 @@
 <ion-header>
 
-  <ion-navbar>
+  <ion-navbar color="primary">
     <ion-title>{{ 'TITLE' | translate }}</ion-title>
     <ion-buttons end>
       <button ion-button icon-only (click)="viewSettings()">
