Add language support for edit page and set language dialog action buttons

--- a/src/pages/edit-shopping-item/edit-shopping-item.html
+++ b/src/pages/edit-shopping-item/edit-shopping-item.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar color="edit">
-    <ion-title>{{shoppingItem.name}}</ion-title>
+    <ion-title>{{shoppingItem.itemName}}</ion-title>
   </ion-navbar>
 
 </ion-header>
