added autofocus for new item, clear got disabled when there are no items

--- a/src/pages/add-shopping-list/add-shopping-list.html
+++ b/src/pages/add-shopping-list/add-shopping-list.html
@@ -10,7 +10,7 @@
 <ion-content padding>
   <ion-item>
     <ion-label stacked>{{'NAME' | translate}}</ion-label>
-    <ion-input type="text" [(ngModel)]="shoppingItem.itemName"></ion-input>
+    <ion-input autofocus type="text" [(ngModel)]="shoppingItem.itemName"></ion-input>
   </ion-item>
   <ion-item>
     <ion-label stacked>{{'NUMBER' | translate}}</ion-label>
